src/objects/Charket__WeChatFollowerPass__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__Entrance__c</fullName>
        <label>Entrance</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__SeatNumber__c</fullName>
        <label>Seat Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Follower</label>
        <referenceTo>Charket__WeChatFollower__c</referenceTo>
        <relationshipLabel>WeChat Follower Passes</relationshipLabel>
        <relationshipName>WeChatFollowerPasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatPass__c</fullName>
        <label>WeChat Pass</label>
        <referenceTo>Charket__WeChatPass__c</referenceTo>
        <relationshipLabel>WeChat Follower Passes</relationshipLabel>
        <relationshipName>WeChatFollowerPasses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__Zone__c</fullName>
        <label>Zone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>WeChat Follower Pass</label>
    <nameField>
        <displayFormat>WFP-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Follower Passes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>